--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ nav ul li{
     border: none;
     border-radius: 10px ;
 position:1008px 51.5px;
-justify-content: center
+justify-content: center;
+cursor: pointer;
 
 }
 .banner h1 {
@@ -51,10 +52,66 @@ h1{
     margin: 100px;
     text-align: center;
 }
+.btn{
+    background-color: #4E47FF;
+   
+    
+}
+nav .btn-primary:hover{
+    background-color: pink;
+
+}
 .header{
     background-image: url(Assets/Hero-bg.png);
+      background-position: top left, bottom right;
+      width: 100%;
+      height: 600px;
 }
-/* .btn{
-    justify-content: space-between;
-    margin: 0 auto;;    
-} */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  text-align: center; /* Center the heading */
+  height: 100vh; /* Adjust to your needs */
+}
+
+.centered-button {
+  display: inline-block; /* Or block, depending on your needs */
+  padding: 10px 20px;
+  background-color: #4E47FF;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.centered-button:hover{
+    background-color: beige;
+}
+
+
+
+  /* Manin */
+  .contain-container{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    justify-content: space-around;
+  }
+  .section-head{
+    font-size: 42px;
+    font-weight: bold;
+    padding-top: 50px;
+    color: #252432;
+  }
+.section-title{
+    font-size: 24px;
+    font-weight: 400px;
+   border-radius: 5px;
+   color: #252432;
+    
+}
+.image{
+    width: 300px;
+    padding-top:  100px;
+    border-radius: 60px ;
+}
