--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ nav .btn-primary:hover{
   border-radius: 8px;
   width: 200px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
 
 .stat-block h3 {
   font-size: 1.8rem;
@@ -233,4 +234,34 @@ nav .btn-primary:hover{
     text-align: center;
 }
 
+/* footer */
+footer{
+    width: 100%;
+    height: 428px;
+    text-align: center;
+    justify-content: center;
+    justify-items: center;
+    border-top: 105px;
+}
 
+.footer-logo{
+    color:#4E47FF ;
+    font-size: 100px;
+    font-weight: 900px;
+
+}
+.footer-descrition{
+    margin-top: 105px;
+}
+footer nav a{
+    color: (137, 135,161,1 );
+    text-decoration: none;
+    align-items: center;
+    gap: 20px;
+}
+footer nav{
+    display: flex;
+    text-align: center;
+    justify-items: center;
+    gap: 20px;
+}
